TEST_PROGRAMS/VALID_TYPECHECK/type_cast_int2rune.go
package main;

func main (){

    var x int = 5;
    var y rune = rune(x);

}

