TEST_PROGRAMS/INVALID/04/57.go
package main

func main() {
    var x = 2

    //Illegal for
    for x; > 2 {
        x++
    }
}
